More options -> settings changes
Signed-off-by: Elliot Condon <e@elliotcondon.com>

--- a/css/field-group.css
+++ b/css/field-group.css
@@ -135,7 +135,7 @@
 	visibility: visible;
 }
 
-.acf-field-list .field .field-options {
+.acf-field-list .field .field-settings {
 	display: none;
 	width: 100%;
 }
