--- a/pro/css/pro-field-group.css
+++ b/pro/css/pro-field-group.css
@@ -52,3 +52,10 @@ table.acf-fc-meta tr td:first-child {
 	visibility: visible;
 }
 
+.acf-field-list .field tr[data-name="column_width"] {
+	display: none;
+}
+
+.acf-field-list.layout-table .field tr[data-name="column_width"] {
+	display: table-row;
+}
