Added custom fields to gallery sidebar
https://github.com/AdvancedCustomFields/acf5-beta/issues/87
Signed-off-by: Elliot Condon <e@elliotcondon.com>

--- a/css/input.css
+++ b/css/input.css
@@ -1027,8 +1027,9 @@ ul.acf-checkbox-list li label {
 
 
 /* compat-item */
-.compat-item .compat-field-acf-form-data {
-	display: none;
+.compat-field-acf-form-data,
+.compat-field-acf-blank {
+	display: none !important;
 }
 
 .compat-item .acf-field {
