--- a/pro/css/pro-input.css
+++ b/pro/css/pro-input.css
@@ -359,8 +359,8 @@
 
 .acf-gallery .acf-gallery-attachment .actions {
 	position: absolute;
-	top: -3px;
-	right: -3px;
+	top: 0;
+	right: 0;
 }
 
 
