--- a/css/input.css
+++ b/css/input.css
@@ -166,6 +166,7 @@ ul.acf-checkbox-list li label {
 .acf-google-map .title {
 	position: relative;
 	border-bottom: #DFDFDF solid 1px;
+	padding: 5px 10px;
 }
 
 .acf-google-map .has-value { display: none; }
@@ -177,9 +178,10 @@ ul.acf-checkbox-list li label {
 .acf-google-map .title h4,
 .acf-google-map .title input[type="text"] {
 	margin: 0;
-	font-size: 12px;
-	line-height: 16px;
-	padding: 10px;
+	font-size: 14px;
+	line-height: 30px;
+	height: 30px;
+	padding: 0;
 	border: 0 none;
 	box-shadow: none;
 	border-radius: 0;
@@ -187,26 +189,10 @@ ul.acf-checkbox-list li label {
 	cursor: text;
 }
 
-.acf-google-map .title input[type="text"] {
-	height: 36px;
-	line-height: normal;
-}
-
-.acf-google-map .title .search {
-	height: auto;
-	border: 0 none;
-}
-
-.acf-google-map .acf-sprite-delete,
-.acf-google-map .acf-sprite-locate {
+.acf-google-map .title .acf-icon {
 	right: 7px;
-	top: 7px;
+	top: 6px;
 	position: absolute;
-	border: 5px solid transparent;
-}
-
-.acf-google-map .acf-sprite-delete {
-	border: 6px solid transparent;
 }
 
 .acf-google-map .canvas {
@@ -356,19 +342,15 @@ ul.acf-checkbox-list li label {
 	height: 17px;
 }
 
-.acf-relationship .choices .list .acf-relationship-item:hover {
+.acf-relationship .list .acf-relationship-item:hover {
 	background: #3875D7;
 	color: #fff;
 }
 
-.acf-relationship .values .list .acf-relationship-item:hover {
-	background: #EAF2FA;
-}
-
 .acf-relationship .values .acf-icon {
 	position: absolute;
-	top: 1px;
-	right: 4px;
+	top: 4px;
+	right: 7px;
 	display: none;
 }
 
@@ -532,24 +514,21 @@ ul.acf-checkbox-list li label {
 .acf-oembed .title {
 	position: relative;
 	border-bottom: #DFDFDF solid 1px;
+	padding: 5px 10px;
 }
 
 .acf-oembed .title h4,
 .acf-oembed .title input[type="text"] {
 	margin: 0;
-	font-size: 12px;
-	line-height: 16px;
-	padding: 10px;
+	font-size: 14px;
+	line-height: 30px;
+	height: 30px;
+	padding: 0;
 	border: 0 none;
 	box-shadow: none;
 	border-radius: 0;
 	font-family: inherit;
 	cursor: text;
-}
-
-.acf-oembed .title input[type="text"] {
-	height: 36px;
-	line-height: normal;
 }
 
 .acf-oembed .title .search {
@@ -624,11 +603,7 @@ ul.acf-checkbox-list li label {
 }
 
 .acf-oembed .canvas-error p {
-	background: #FFEBE8;
-	border: #CC0000 solid 1px;
-	border-radius: 2px;
 	padding: 8px;
-	color: #BB4444;
 	margin: 0;
 	display: inline;
 }
@@ -699,12 +674,12 @@ ul.acf-checkbox-list li label {
 
 .acf-image-uploader .acf-soh-target {
 	position: absolute;
-	top: -11px;
-	right: -11px;
+	top: 5px;
+	right: 5px;
 }
 
 .acf-image-uploader .acf-soh-target li {
-	margin: 0 0 2px;
+	margin: 0 0 0 4px;
 }
 
 
@@ -716,28 +691,42 @@ ul.acf-checkbox-list li label {
 
 .acf-file-uploader {
 	position: relative;
+	
 }
 
-.acf-file-uploader li {
+.acf-file-uploader .file-info {
+	border: #DFDFDF solid 1px;
+	float: left;
+}
+
+.acf-file-uploader .file-info li {
 	position: relative;
 }
 
-.acf-file-uploader img {
+.acf-file-uploader .file-info img {
 	min-height: 60px;
 	min-width: 46px;
 	display: block;
 	background: #f1f1f1;
-	margin: 0 10px 0 0 ;
 }
 
-.acf-file-uploader a {
+.acf-file-uploader .file-info a {
 	text-decoration: none;
 }
 
-.acf-file-uploader p {
+.acf-file-uploader .file-info p {
 	margin: 0 0 2px;
 	font-size: 13px;
 	line-height: 1.4em;
+}
+
+.acf-file-uploader .file-info > li {
+	padding: 9px;
+}
+
+.acf-file-uploader .file-info > li.icon {
+	background: #F9F9F9;
+	border-right: #E5E5E5 solid 1px;
 }
 
 
@@ -745,14 +734,8 @@ ul.acf-checkbox-list li label {
 *  Hover
 */
 
-.acf-file-uploader .acf-soh-target {
-	position: absolute;
-	top: -6px;
-	right: 0;
-}
-
 .acf-file-uploader .acf-soh-target li {
-	margin: 0 0 2px;
+	margin: 0 0 0 4px;
 }
 
 
