Fixed CSS bug breaking "Create Gallery" layout
https://github.com/AdvancedCustomFields/acf5-beta/issues/155
Signed-off-by: Elliot Condon <e@elliotcondon.com>

--- a/css/input.css
+++ b/css/input.css
@@ -926,6 +926,13 @@ ul.acf-checkbox-list li label {
 }
 
 
+/* Create gallery fix */
+.media-modal .media-sidebar .collection-settings .setting span {
+	padding-top: 8px;
+	margin: 0 10px 0 0;
+}
+
+
 /*---------------------------------------------------------------------------------------------
 *
 *  Media Model (Edit Mode)
