Improved welcome info page text
Signed-off-by: Elliot Condon <e@elliotcondon.com>

--- a/css/global.css
+++ b/css/global.css
@@ -133,6 +133,10 @@ img.acf-fw {
 	margin: 0 !important;
 }
 
+.acf-callout p {
+	margin-bottom: 0;
+}
+
 .acf-callout.danger {
 	border-color: #D9534F;
 	background-color: #FDF7F7;
