--- a/pro/css/pro-field-group.css
+++ b/pro/css/pro-field-group.css
@@ -34,22 +34,29 @@ table.acf-fc-meta tr td:first-child {
     height: 25px;
 }
 
-.acf-fc-reorder {
-	cursor: move;
-}
-
 .acf-fc-meta-label .acf-input-prepend,
 .acf-fc-meta-name .acf-input-prepend,
 .acf-fc-meta-display .acf-input-prepend {
 	min-width: 45px;
 }
 
-.acf-fc-description {
+.acf-fl-actions {
 	visibility: hidden;
 }
 
-.acf-field:hover .acf-fc-description {
+.acf-field:hover .acf-fl-actions {
 	visibility: visible;
+}
+
+.acf-fl-actions a {
+	display: block;
+	line-height: 20px;
+	padding: 1px 0;
+	font-size: 13px;
+}
+
+.acf-fl-actions a[data-name="acf-fc-reorder"] {
+	cursor: move;
 }
 
 .acf-field-list .field tr[data-name="column_width"] {
